--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -57,6 +57,13 @@
   outline: none;
 }
 
+/* PostCard */
+.post-card {
+  width: 100%;
+  height: 100%;
+  padding: 5px;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
