--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -64,6 +64,15 @@
   padding: 5px;
 }
 
+/* Vote */
+.vote {
+  margin-bottom: 10px;
+}
+
+.votes-number {
+  margin-right: 10px;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
